# CareAgents

./: .gitignore  AGENTS_IMPLEMENTATION_SUMMARY.md  APPOINTMENT_BOOKING_FIX.md  APPOINTMENT_SYSTEM.md  ARCHITECTURE.md  COMPLETE_IMPLEMENTATION.md  FIXES_SUMMARY.md  GUEST_CHAT_SETUP.md  LANDING_PAGE_SUMMARY.md  LICENSE  ONBOARDING_API_GUIDE.md  ONBOARDING_ISSUES_AND_FIXES.md  ONBOARDING_OPTIONAL_FIELDS.md  QUICK_START.md  README.md  SETUP.md  VOICE_CHAT_IMPLEMENTATION.md  VOICE_CHAT_QUICKSTART.md
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  GCP_CLOUDSQL_SETUP.md  MIGRATION_GUIDE.md  README.md  RUN_LOCALLY.md  START.md  clear_all_data.py  deploy.sh  fix_doctor_fkey.sql  fix_doctor_user.sql  fix_missing_doctor.py  main.py  main_agents.py  pyproject.toml  run_migrations.py  run_user_id_migration.py  seed_all_data.py  seed_doctors.py  seed_patients.py  setup_agents.sh  test_env.py  test_guest_chat.py  test_path.py
backend/agents/: QUICKSTART.md  README.md  __init__.py  adk_chat_agent.py  adk_record_agent.py  adk_tools.py  appointment_agent.py  chat_agent.py  doctor_chat_agent.py  patient_embedding_agent.py  prescription_parser_agent.py  record_agent.py
backend/mcp-toolbox/: tools.yaml
backend/models/: appointment.py  doctor.py  health_vitals.py  medical_history.py  patient.py  user.py
backend/routes/: admin.py  ai_appointments.py  appointments.py  chat.py  doctor_chat.py  doctors.py  files.py  medical_history.py  onboarding.py  patients.py  prescription_parser.py  users.py  voice_chat.py
backend/services/: appointment_service.py  user_service.py  (+5 more)
(+71 files in other folders)
